--- a/index.html
+++ b/index.html
@@ -203,4 +203,27 @@
     </div>
 
     <div id="contact" class="card section">
-      <h2
+      <h2>Contact</h2>
+      <p class="muted">Message on WhatsApp or call to enquire about fees, schedules, and enrollment.</p>
+      <ul class="list">
+        <li><b>WhatsApp / Phone:</b> +94 XX XXX XXXX</li>
+        <li><b>Email:</b> yourname@email.com</li>
+        <li><b>Location:</b> Kurunegala</li>
+      </ul>
+      <div class="btnrow" style="margin-top:14px;">
+        <a class="btn primary" href="https://wa.me/94XXXXXXXXX" target="_blank" rel="noopener">💬 WhatsApp</a>
+        <a class="btn" href="mailto:sasminakavinda7@gmail.com">✉️ Email</a>
+      </div>
+    </div>
+
+    <div class="footer">
+      © <span id="y"></span> Sasmina Kavinda. All rights reserved.
+    </div>
+  </div>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
+        
